force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <label>Invoice</label>
    <pluralLabel>Invoices</pluralLabel>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Factura de cliente (REAV) que se emite en Holded.</description>
</CustomObject>