force-app/main/default/objects/Invoice__c/fields/Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference__c</fullName>
    <label>Booking Reference</label>
    <type>Text</type>
    <length>80</length>
</CustomField>