force-app/main/default/objects/Invoice__c/fields/Holded_Id__c.field-meta.xml
<CustomField>
    <fullName>Holded_Id__c</fullName>
    <label>Holded Id</label>
    <type>Text</type>
    <length>40</length>
    <externalId>true</externalId>
</CustomField>