force-app/main/default/objects/Invoice__c/fields/Holded_Number__c.field-meta.xml
<CustomField>
    <fullName>Holded_Number__c</fullName>
    <label>Holded Number</label>
    <type>Text</type>
    <length>40</length>
</CustomField>