force-app/main/default/objects/Invoice__c/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <type>Text</type>
    <length>80</length>
</CustomField>