force-app/main/default/objects/Invoice__c/fields/Source_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Source_Invoice__c</fullName>
    <label>Source Invoice</label>
    <type>Lookup</type>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipName>Credit_Notes</relationshipName>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>