force-app/main/default/objects/Invoice__c/fields/Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Sync_Error__c</fullName>
    <label>Sync Error</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>