force-app/main/default/objects/Invoice__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Standard</fullName><default>false</default><label>Standard</label></value>
            <value><fullName>Simplified</fullName><default>false</default><label>Simplified</label></value>
            <value><fullName>Credit_Note</fullName><default>false</default><label>Credit Note</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>